# ChiraPuzzlemaker

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build_engine.yml  build_linux.yml  build_windows.yml
.run/: ChiraEditor.run.xml
resources/editor/materials/: test_vtf_material.json
resources/editor/meshes/: README.md  info_catboy_start.dx90.vtx  info_catboy_start.json  info_catboy_start.mdl  info_catboy_start.vvd
resources/editor/textures/: vtf_test.vtf
resources/fonts/: default.json
resources/fonts/selawik/: README.md
resources/i18n/: editor_en.json  editor_universal.json  puzzlemaker_en.json
resources/icon/: icon.rc
resources/materials/: test_vtf_material.json  vtf_test.json
resources/meshes/: teapot.json
resources/textures/: vtf_test.json
src/: CMakeLists.txt  editor.cpp  main.cpp
src/core/: CMakeLists.txt  Puzzlemaker.cpp  main.cpp
src/loader/: CMakeLists.txt  mdlMeshLoader.cpp  mdlMeshLoader.h  vtfImage.cpp  vtfImage.h
src/loader/image/: CMakeLists.txt  vtfImage.cpp  vtfImage.h
src/loader/vpk/: CMakeLists.txt  vpk.cpp  vpk.h
src/render/: CMakeLists.txt  ImageVTF.cpp  ImageVTF.h  MaterialVTF.cpp  MaterialVTF.h  TextureVTF.cpp  TextureVTF.h  materialVTF.cpp  materialVTF.h  textureVTF.cpp  textureVTF.h  vtfMaterial.cpp  vtfMaterial.h  vtfTexture.cpp  vtfTexture.h
src/resource/: CMakeLists.txt  vtfTextureResource.cpp  vtfTextureResource.h
src/resource/provider/: CMakeLists.txt  VPKResourceProvider.cpp  VPKResourceProvider.h  vpkResourceProvider.cpp  vpkResourceProvider.h
src/utility/: CMakeLists.txt  mdlHeaders.h
